<resources>
    <string name="app_name">TheMainComponentsOfTheUserInterface</string>
    <string name="text_main">Hello World!</string>
    <string name="email_edit_text">email</string>
    <string name="password_edit_text">password</string>
    <string name="log_in_edit_text">Log In</string>
    <string name="email_text_input_layout">Email</string>
    <string name="email_text_input_edit_text">email</string>
    <string name="button_text_changing_theme">Изменить тему</string>
    <string name="button_radio_group_activity">RadioGroupActivity</string>
    <string name="button_edit_text_activity">EditTextActivity</string>
    <string name="button_text_input_layout_activity">TextInputLayoutActivity</string>
    <string name="button_changing_the_theme">ChangingTheTheme</string>
    <string name="button_save_changing_the_theme">Save</string>
    <string name="button_request_camera">RequestCamera</string>
</resources>