<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_main"
        app:layout_constraintBottom_toTopOf="@id/button_radio_group_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_radio_group_activity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_radio_group_activity"
        app:layout_constraintBottom_toTopOf="@+id/button_edit_text_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_edit_text_activity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_edit_text_activity"
        app:layout_constraintBottom_toTopOf="@+id/button_text_input_layout_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_radio_group_activity" />

    <Button
        android:id="@+id/button_text_input_layout_activity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_text_input_layout_activity"
        app:layout_constraintBottom_toTopOf="@+id/button_changing_the_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit_text_activity" />

    <Button
        android:id="@+id/button_changing_the_theme"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_changing_the_theme"
        app:layout_constraintBottom_toTopOf="@id/button_request_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_text_input_layout_activity" />

    <Button
        android:id="@+id/button_request_camera"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_request_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_changing_the_theme" />
</androidx.constraintlayout.widget.ConstraintLayout>